@@ -32,7 +32,7 @@
 #' @import ggplot2
 #' @importFrom plyr dlply
 #' @importFrom stats reorder
-#' @importFrom glpgUtilityFct getLabelVar getGLPGColorPalette
+#' @importFrom glpgUtilityFct getLabelVar
 #' @export
 subjectProfileIntervalPlot <- function(
 	data,
@@ -109,9 +109,9 @@ subjectProfileIntervalPlot <- function(
 	# convert color variable to factor
 	if(!is.null(colorVar)){
 		data[, colorVar] <- convertAesVar(data, colorVar)
-		if(is.null(colorPalette))	colorPalette <- getGLPGColorPalette(x = data[, colorVar])
+		if(is.null(colorPalette))	colorPalette <- getGLPGColorPaletteVis(x = data[, colorVar])
 	}else{
-		if(is.null(colorPalette))	colorPalette <- getGLPGColorPalette(n = 1)
+		if(is.null(colorPalette))	colorPalette <- getGLPGColorPaletteVis(n = 1)
 	}
 	
 	listPlots <- dlply(data, subjectVar, function(dataSubject){	
